js262/test/language/module-code/parse-err-decl-pos-import-class-expr-meth.js


/*---
description: Expression cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

(class { method() { import v from './decl-pos-import-class-expr-meth.js'; } });
